--- a/styles/scss/rem.scss
+++ b/styles/scss/rem.scss
@@ -1,7 +1,41 @@
 body {
-    display: grid;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
 
-    button {
-    }
+button {
+    background-color: hsl(220, 60%, 50%);
+    color: hsl(0, 0%, 98%);
+
+    font-weight: bold;
+
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: hsl(220, 60%, 40%);
+}
+
+button.px {
+    width: 160px;
+
+    padding: 10px 20px;
+
+    border: none;
+    border-radius: 999px;
+
+    font-size: 24px;
+}
+
+button.rem {
+    width: 16rem;
+
+    padding: 1rem 2rem;
+
+    border: none;
+    border-radius: 999rem;
+
+    font-size: 2.4rem;
 }
