--- a/styles/scss/layouts.scss
+++ b/styles/scss/layouts.scss
@@ -3,18 +3,20 @@ body {
 }
 
 p {
-    /*display: inline-block;*/
+    color: black;
 
-    max-width: 20ch;
+    display: inline-block;
 
-    /*width: 20rem;*/
-    /*height: 20rem;*/
+    //max-width: 20ch;
+
+    width: 20rem;
+    height: 20rem;
 
     margin: 0 auto 2rem;
-    padding: 2rem;
+    //padding: 2rem;
 
     /* TODO: challenge - same color as the property "color" */
-    outline: 0.5rem solid black;
+    outline: 0.5rem solid currentColor;
 
     font-size: 2.4rem;
 }
