--- a/styles/css/responsive.css
+++ b/styles/css/responsive.css
@@ -11,7 +11,7 @@ body {
 
 ul {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: var(--gap--large);
   max-width: 100%;
   list-style: none;
@@ -19,8 +19,8 @@ ul {
 
 ul > li {
   background-color: #fafafa;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-areas: "img img" ". button" "info info";
   transition: transform 0.2s linear;
 }
 
@@ -29,12 +29,14 @@ ul > li:hover {
 }
 
 ul > li > img {
+  grid-area: img;
   width: 100%;
   height: auto;
   object-fit: contain;
 }
 
 ul > li > .info {
+  grid-area: info;
   padding: var(--gap--small) var(--gap--medium);
 }
 
@@ -54,6 +56,7 @@ ul > li > .info > p {
 }
 
 ul > li > button {
+  grid-area: button;
   background-color: #3366cc;
   color: #fafafa;
   margin-left: auto;
@@ -66,6 +69,29 @@ ul > li > button {
 
 ul > li > button:hover {
   background-color: #2952a3;
+}
+
+@media (min-width: 600px) {
+  ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 768px) {
+  ul > li {
+    display: flex;
+    flex-direction: column;
+  }
+
+  ul > li > img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+}
+@media (min-width: 1200px) {
+  ul {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 /*# sourceMappingURL=responsive.css.map */
