--- a/styles/scss/responsive.scss
+++ b/styles/scss/responsive.scss
@@ -12,7 +12,7 @@ body {
 
 ul {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: var(--gap--large);
 
     max-width: 100%;
@@ -23,8 +23,8 @@ ul {
 ul > li {
     background-color: hsl(0, 0%, 98%);
 
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-areas: 'img img' '. button' 'info info';
 
     transition: transform 0.2s linear;
 }
@@ -34,6 +34,8 @@ ul > li:hover {
 }
 
 ul > li > img {
+    grid-area: img;
+
     width: 100%;
     height: auto;
 
@@ -41,6 +43,7 @@ ul > li > img {
 }
 
 ul > li > .info {
+    grid-area: info;
     padding: var(--gap--small) var(--gap--medium);
 }
 
@@ -61,6 +64,8 @@ ul > li > .info > p {
 }
 
 ul > li > button {
+    grid-area: button;
+
     background-color: hsl(220, 60%, 50%);
     color: hsl(0, 0%, 98%);
 
@@ -83,15 +88,32 @@ ul > li > button:hover {
 }
 
 @media (min-width: 600px) {
+    ul {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media (min-width: 768px) {
+    ul > li {
+        display: flex;
+        flex-direction: column;
+    }
+
+    ul > li > img {
+        width: 100%;
+        height: auto;
+
+        object-fit: contain;
+    }
 }
 
 @media (min-width: 900px) {
 }
 
 @media (min-width: 1200px) {
+    ul {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 @media (min-width: 1920px) {
