--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,5 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
+$size: 10rem;
+
+@mixin layout-3-columns {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+@mixin layout-n-columns($n: 3) {
+    display: grid;
+    grid-template-columns: repeat($n, 1fr);
+    gap: 2rem;
+}
+
+@mixin size-based-on-columns-count($n) {
+    width: responsive-layout($n);
+    height: responsive-layout($n);
+}
+
+@function responsive-layout($columns-count) {
+    @if $columns-count == 3 {
+        @return 12rem;
+    } @else if $columns-count == 2 {
+        @return 10rem;
+    }
+
+    @return 15rem;
+}
+
 *,
 *::before,
 *::after {
@@ -16,5 +45,92 @@ html {
 }
 
 body {
+    background-color: #cdcdcd;
+
+    display: grid;
+    place-items: center;
+
     min-height: 100vh;
+}
+
+ul {
+    $count: 2;
+    @include layout-n-columns($count);
+
+    list-style: none;
+
+    li {
+        background-color: #fafafa;
+
+        display: grid;
+        place-items: center;
+
+        @include size-based-on-columns-count($count);
+
+        font-size: 1.6rem;
+
+        h3 {
+            font-size: 2rem;
+        }
+
+        //@for $i from 0 to 4 + 1 {
+        //    &:nth-child(#{$i + 1}) {
+        //        background-color: hsl($i * 360 / 5, 100%, 50%);
+        //    }
+        //}
+
+        @for $i from 1 to 360 + 1 {
+            $color: hsl(($i - 1) * 360 / 360, 100%, 50%);
+
+            &:nth-child(#{$i}) {
+                background-color: $color;
+            }
+
+            &::after {
+                content: '#{$color}';
+            }
+        }
+
+        //&:nth-child(1) {
+        //    background-color: hsl(0, 100%, 50%);
+        //}
+        //
+        //&:nth-child(2) {
+        //    background-color: hsl(72, 100%, 50%);
+        //}
+        //
+        //&:nth-child(3) {
+        //    background-color: hsl(144, 100%, 50%);
+        //}
+        //
+        //&:nth-child(4) {
+        //    background-color: hsl(216, 100%, 50%);
+        //}
+        //
+        //&:nth-child(5) {
+        //    background-color: hsl(278, 100%, 50%);
+        //}
+    }
+}
+
+@media (min-width: 600px) {
+    ul {
+        $count: 3;
+        @include layout-n-columns($count);
+
+        li {
+            @include size-based-on-columns-count($count);
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    ul {
+        $count: 5;
+        @include layout-n-columns($count);
+
+        li {
+            @include size-based-on-columns-count($count);
+        }
+    }
 }
