--- a/styles/css/slideshow.css
+++ b/styles/css/slideshow.css
@@ -54,9 +54,11 @@ body {
 }
 
 .slide {
+  background-size: contain;
   box-shadow: 0 0 10px rgba(26, 26, 26, 0.5);
   width: 480px;
   height: 270px;
+  transition: background 1s ease-in-out;
 }
 
 /*# sourceMappingURL=slideshow.css.map */
